--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
                         </div>
                     </div>
                     <div class="my_img d-none d-lg-block">
-                        <img src="img/me/1687529755573-removebg-preview.png" alt="" style="width: 100%; height: 520px; border-radius: 185px; border-bottom: 5px solid #d67e35;">
+                        <img src="img/me/1687529755573-removebg-preview.png" alt="" style="width: 100%; height: 520px;">
                     </div>
                 </div>
             </div>
